[gd_scene load_steps=18 format=2]

[ext_resource path="res://Chicarego.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Image from iOS.png" type="Texture" id=3]
[ext_resource path="res://morning-funny-beat-7741.mp3" type="AudioStream" id=4]
[ext_resource path="res://images/buttons/audioOn.png" type="Texture" id=5]
[ext_resource path="res://images/buttons/musicOn.png" type="Texture" id=6]
[ext_resource path="res://Fontes/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Image_from_iOS__5_-removebg-preview-3.png" type="Texture" id=8]
[ext_resource path="res://setinha_voltar.png" type="Texture" id=9]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ChiKareGo2Font.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
LineEdit/styles/normal = SubResource( 5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FundoImgMenu" type="Sprite" parent="."]
position = Vector2( 596, 329 )
scale = Vector2( 1.73203, 1.69605 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Menuiniciar" type="Sprite" parent="."]

[node name="NomeGame" type="Label" parent="Menuiniciar"]
margin_left = 53.0
margin_top = 117.0
margin_right = 1077.0
margin_bottom = 147.0
rect_scale = Vector2( 3.38489, 3.38489 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Betegoshi'$ Adventure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIniciar" type="Label" parent="Menuiniciar"]
margin_left = 354.0
margin_top = 247.0
margin_right = 1378.0
margin_bottom = 262.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 5.35953, 5.35953 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Começar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciarButton" type="Button" parent="Menuiniciar/LabelIniciar"]
modulate = Color( 0.698039, 0.462745, 0.462745, 0 )
margin_left = -9.0
margin_top = -4.0
margin_right = 518.0
margin_bottom = 166.0
rect_scale = Vector2( 0.14196, 0.14196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOptions" type="Label" parent="Menuiniciar"]
margin_left = 431.0
margin_top = 384.0
margin_right = 1455.0
margin_bottom = 399.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 2.78478, 2.78478 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Opções"

[node name="ConfiguracoesButton" type="Button" parent="Menuiniciar/LabelOptions"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -4.0
margin_right = 203.0
margin_bottom = 59.0
rect_scale = Vector2( 0.257218, 0.257218 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSair" type="Label" parent="Menuiniciar"]
margin_left = 460.0
margin_top = 426.0
margin_right = 1484.0
margin_bottom = 441.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 2.785, 2.785 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SairButton" type="Button" parent="Menuiniciar/LabelSair"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.94974
margin_top = -0.052536
margin_right = 21.0503
margin_bottom = 19.9475
rect_scale = Vector2( 1.29087, 1.29087 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuracoes" type="Sprite" parent="."]
visible = false
position = Vector2( -117, -12 )
scale = Vector2( 1.41425, 1.41425 )

[node name="Fundo" type="ColorRect" parent="Configuracoes"]
margin_left = 203.0
margin_top = 31.0
margin_right = 661.0
margin_bottom = 387.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 338.0
margin_top = 58.0
margin_right = 542.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "CONFIGURAÇÕES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 293.0
margin_top = 121.0
margin_right = 401.0
margin_bottom = 221.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 484.0
margin_top = 125.0
margin_right = 595.0
margin_bottom = 230.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Configuracoes"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 381.0
margin_top = 240.0
margin_right = 482.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitButton" type="Button" parent="Configuracoes"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 363.0
margin_top = 284.0
margin_right = 508.0
margin_bottom = 311.0

[node name="SaveLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 399.0
margin_top = 241.0
margin_right = 464.872
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "Salvar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 372.0
margin_top = 284.0
margin_right = 497.872
margin_bottom = 314.0
custom_fonts/font = SubResource( 4 )
text = "Salvar e sair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColocarNome" type="Sprite" parent="."]
visible = false

[node name="BalaoNome" type="Sprite" parent="ColocarNome"]
position = Vector2( 512, 345 )
scale = Vector2( 1.10857, 0.914789 )
texture = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="ColocarNome/BalaoNome"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -106.0
margin_top = -48.0
margin_right = 13.0
rect_scale = Vector2( 1.72204, 1.72204 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Insiranome" type="Label" parent="ColocarNome"]
margin_left = 225.0
margin_top = 219.0
margin_right = 468.0
margin_bottom = 242.0
rect_scale = Vector2( 2.47737, 2.47737 )
custom_fonts/font = SubResource( 7 )
text = "INSIRA SEU NOME ABAIXO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSeta" type="TextureButton" parent="ColocarNome"]
margin_left = 663.0
margin_top = 497.0
margin_right = 808.0
margin_bottom = 594.0
rect_rotation = -180.311
rect_scale = Vector2( 0.897358, 0.897358 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menuiniciar/LabelIniciar/IniciarButton" to="." method="_on_IniciarButton_pressed"]
[connection signal="pressed" from="Menuiniciar/LabelOptions/ConfiguracoesButton" to="." method="_on_ConfiguracoesButton_pressed"]
[connection signal="pressed" from="Menuiniciar/LabelSair/SairButton" to="." method="_on_SairButton_pressed"]
[connection signal="pressed" from="Configuracoes/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="Configuracoes/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Configuracoes/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ColocarNome/BotaoSeta" to="." method="_on_BotaoSeta_pressed"]
