[gd_scene load_steps=22 format=2]

[ext_resource path="res://Chicarego.tres" type="DynamicFont" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Image from iOS.png" type="Texture" id=3]
[ext_resource path="res://morning-funny-beat-7741.mp3" type="AudioStream" id=4]
[ext_resource path="res://images/buttons/audioOn.png" type="Texture" id=5]
[ext_resource path="res://images/buttons/musicOn.png" type="Texture" id=6]
[ext_resource path="res://Fontes/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Image_from_iOS__5_-removebg-preview-3.png" type="Texture" id=8]
[ext_resource path="res://setinha_voltar.png" type="Texture" id=9]
[ext_resource path="res://Action RPG Resources/Player/Fox sheet.png" type="Texture" id=10]
[ext_resource path="res://Action RPG Resources/Player/Sapinho sheet.png" type="Texture" id=11]
[ext_resource path="res://Action RPG Resources/Player/Leaozinho sheet.png" type="Texture" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://ChiKareGo2Font.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
LineEdit/styles/normal = SubResource( 5 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="FundoImgMenu" type="Sprite" parent="."]
position = Vector2( 573, 317 )
scale = Vector2( 1.73203, 1.69605 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Menuiniciar" type="Sprite" parent="."]

[node name="NomeGame" type="Label" parent="Menuiniciar"]
modulate = Color( 1, 0.960784, 0, 1 )
margin_left = 15.0
margin_top = 51.0
margin_right = 1039.0
margin_bottom = 81.0
rect_scale = Vector2( 3.38489, 3.38489 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "Betegoshi'$ Adventure"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIniciar" type="Label" parent="Menuiniciar"]
modulate = Color( 0, 1, 0.976471, 1 )
margin_left = 369.0
margin_top = 258.0
margin_right = 1393.0
margin_bottom = 273.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 4.69576, 4.69576 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "Começar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IniciarButton" type="Button" parent="Menuiniciar/LabelIniciar"]
modulate = Color( 0.698039, 0.462745, 0.462745, 0 )
margin_left = -9.0
margin_top = -4.0
margin_right = 518.0
margin_bottom = 166.0
rect_scale = Vector2( 0.14196, 0.14196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelOptions" type="Label" parent="Menuiniciar"]
margin_left = 431.0
margin_top = 484.0
margin_right = 1455.0
margin_bottom = 499.0
rect_min_size = Vector2( 59, 0 )
rect_scale = Vector2( 2.78478, 2.78478 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "Opções"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfiguracoesButton" type="Button" parent="Menuiniciar/LabelOptions"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -4.0
margin_right = 203.0
margin_bottom = 59.0
rect_scale = Vector2( 0.257218, 0.257218 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuracoes" type="Sprite" parent="."]
visible = false
position = Vector2( -117, -12 )
scale = Vector2( 1.41425, 1.41425 )

[node name="Fundo" type="ColorRect" parent="Configuracoes"]
margin_left = 203.0
margin_top = 31.0
margin_right = 661.0
margin_bottom = 387.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 338.0
margin_top = 58.0
margin_right = 542.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 3 )
text = "CONFIGURAÇÕES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 293.0
margin_top = 121.0
margin_right = 401.0
margin_bottom = 221.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="Configuracoes"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 484.0
margin_top = 125.0
margin_right = 595.0
margin_bottom = 230.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Configuracoes"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 381.0
margin_top = 240.0
margin_right = 482.0
margin_bottom = 264.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitButton" type="Button" parent="Configuracoes"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 363.0
margin_top = 284.0
margin_right = 508.0
margin_bottom = 311.0

[node name="SaveLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 399.0
margin_top = 241.0
margin_right = 464.872
margin_bottom = 271.0
custom_fonts/font = SubResource( 4 )
text = "Salvar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveAndQuitLabel" type="Label" parent="Configuracoes"]
modulate = Color( 0.156863, 0.203922, 0.356863, 1 )
anchor_right = 0.128
margin_left = 372.0
margin_top = 284.0
margin_right = 497.872
margin_bottom = 314.0
custom_fonts/font = SubResource( 4 )
text = "Salvar e sair"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColocarNome" type="Sprite" parent="."]
visible = false

[node name="BalaoNome" type="Sprite" parent="ColocarNome"]
position = Vector2( 512, 345 )
scale = Vector2( 1.10857, 0.914789 )
texture = ExtResource( 8 )

[node name="LineEdit" type="LineEdit" parent="ColocarNome/BalaoNome"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -106.0
margin_top = -48.0
margin_right = 13.0
rect_scale = Vector2( 1.72204, 1.72204 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Insiranome" type="Label" parent="ColocarNome"]
margin_left = 225.0
margin_top = 219.0
margin_right = 468.0
margin_bottom = 242.0
rect_scale = Vector2( 2.47737, 2.47737 )
custom_fonts/font = SubResource( 7 )
text = "INSIRA SEU NOME ABAIXO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoSeta" type="TextureButton" parent="ColocarNome"]
margin_left = 663.0
margin_top = 497.0
margin_right = 808.0
margin_bottom = 594.0
rect_rotation = -180.311
rect_scale = Vector2( 0.897358, 0.897358 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelecionarPersonagem" type="Sprite" parent="."]
visible = false

[node name="SpriteAvatar1" type="Sprite" parent="SelecionarPersonagem"]
show_behind_parent = true
position = Vector2( 214, 240 )
scale = Vector2( 8.76373, 8.76373 )
texture = ExtResource( 10 )
hframes = 3
vframes = 4
frame = 1

[node name="SpriteAvatar2" type="Sprite" parent="SelecionarPersonagem"]
show_behind_parent = true
position = Vector2( 516, 240 )
scale = Vector2( 8.76373, 8.76373 )
texture = ExtResource( 11 )
hframes = 3
vframes = 4
frame = 1

[node name="SpriteAvatar3" type="Sprite" parent="SelecionarPersonagem"]
show_behind_parent = true
position = Vector2( 806, 240 )
scale = Vector2( 8.76373, 8.76373 )
texture = ExtResource( 12 )
hframes = 3
vframes = 4
frame = 1

[node name="Avatar_1" type="Button" parent="SelecionarPersonagem"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 104.0
margin_top = 72.0
margin_right = 333.0
margin_bottom = 425.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar_2" type="Button" parent="SelecionarPersonagem"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 406.0
margin_top = 73.0
margin_right = 634.0
margin_bottom = 425.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar_3" type="Button" parent="SelecionarPersonagem"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 693.0
margin_top = 73.0
margin_right = 920.0
margin_bottom = 427.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComecarOGameLabel" type="Label" parent="SelecionarPersonagem"]
margin_left = 359.0
margin_top = 451.0
margin_right = 443.0
margin_bottom = 473.0
rect_scale = Vector2( 4.70552, 4.70552 )
custom_fonts/font = SubResource( 9 )
text = "Começar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComecarOGame" type="Button" parent="SelecionarPersonagem"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 345.0
margin_top = 466.0
margin_right = 761.0
margin_bottom = 558.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menuiniciar/LabelIniciar/IniciarButton" to="." method="_on_IniciarButton_pressed"]
[connection signal="pressed" from="Menuiniciar/LabelOptions/ConfiguracoesButton" to="." method="_on_ConfiguracoesButton_pressed"]
[connection signal="pressed" from="Configuracoes/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="Configuracoes/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Configuracoes/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="ColocarNome/BotaoSeta" to="." method="_on_BotaoSeta_pressed"]
[connection signal="pressed" from="SelecionarPersonagem/Avatar_1" to="." method="_on_Avatar_1_pressed"]
[connection signal="pressed" from="SelecionarPersonagem/Avatar_2" to="." method="_on_Avatar_2_pressed"]
[connection signal="pressed" from="SelecionarPersonagem/Avatar_3" to="." method="_on_Avatar_3_pressed"]
[connection signal="pressed" from="SelecionarPersonagem/ComecarOGame" to="." method="_on_ComecarOGame_pressed"]
